--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# golang
+# Golang
 go.sum
 
-# intelliJ
+# IntelliJ
 .idea
